--- a/Index.html
+++ b/Index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta charset="utf-8" />
-<script src="employees-json.js"></script>
-<script src="service.js"></script>
 <head>
     <meta charset="UTF-8">
     <title>Тестовое задание Чепрасова Дмитрия</title>
+    <script src="/employees-json.js"></script>
+    <script src="/service.js"></script>
 </head>
 <body>
 
